--- a/main.bib
+++ b/main.bib
@@ -289,3 +289,20 @@
   url     = {https://mmcif.wwpdb.org/},
   journal = {PDBx/mmCIF Dictionary Resources}
 } 
+
+@book{gupta2015principles,
+  title={Principles and applications of quantum chemistry},
+  author={Gupta, VP},
+  year={2015},
+  publisher={Academic Press}
+}
+
+@PhdThesis{racek2022thesis,
+AUTHOR = "Raček, Tomáš",
+TITLE = "Empirical methods for calculating partial atomic charges [online]",
+YEAR = "2022 [cit. 2023-05-14]",
+TYPE = "Disertační práce",
+SCHOOL = "Masarykova univerzita, Fakulta informatiky, Brno",
+NOTE = "SUPERVISOR : Luděk Matyska",
+URL = "https://is.muni.cz/th/gy8gf/",
+}
