--- a/fi-pdflatex.tex
+++ b/fi-pdflatex.tex
@@ -136,7 +136,7 @@ The absence of this functionality in the Mol* viewer presents a significant limi
 
 Chapter \ref{chapter:theory} introduces the theoretical concepts of molecular structures and partial atomic charges, along with the chemical file formats utilized in this work. Building on this foundation, Chapter \ref{chapter:visualizing_molecular_data} discusses the various visualization methods and software tools for visualizing molecular structures. Chapter \ref{chapter:molstar_partial_charges_extension} then describes the implementation of the Mol* viewer extension for visualizing partial atomic charges. Finally, the extended Mol* viewer is integrated into the Atomic Charge Calculator II and αCharges web applications, as detailed in Chapters \ref{chapter:atomic_charge_calculator_ii} and \ref{chapter:alphacharges}.
 
-Through these efforts, this thesis seeks to advance the field of computational chemistry by enabling researchers to visualize partial atomic charges in molecular structures using the Mol* viewer.
+Through these efforts, this thesis seeks to advance the field of computational chemistry by providing researchers with a modern visualization of partial atomic charges in Mol*.
 
 \newpage
 \chapter{Theory}
